ADD: ZEDClassModel, QAbstractItemModel based model, has been implemented for ZEClass(es). REM: ZEDClassTree has been removed in favor of model based ZEDClassModel. MOD: ZEDClassBrowser has been modified to use ZEDClassModel.
svn path=/trunk/; revision=2217

--- a/Source/ZEDEditor/ZEDUserInterface/ZEDClassBrowser.ui
+++ b/Source/ZEDEditor/ZEDUserInterface/ZEDClassBrowser.ui
@@ -52,7 +52,7 @@
     </widget>
    </item>
    <item>
-    <widget class="ZEDClassTree" name="trwClasses"/>
+    <widget class="QTreeView" name="trwClasses"/>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -80,13 +80,6 @@
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>ZEDClassTree</class>
-   <extends>QTreeWidget</extends>
-   <header>ZEDClassTree.h</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
