FIX: Death-Lock in ZEDAssetManager has been fixed. ADD: ZEDObjectModel has been added. REM: ZEDObjectTree has been removed in favor of ZEDObjectModel. FIX: Many fixes and fortifications have been made on ZEDClassModel. FIX: Minor fixes and improvements have been made on ZEDClassBrowser. MOD: ZEDObjectBrowser has been modified to use ZEDObjectModel and regular QTreeView instead ZEDObjectTree. MOD: ZEWildcard has been moved to it's own source and header file. ADD: ZED_OET_ADDING and ZED_OET_REMOVING ZEDObjecTEvent types have been added.
svn path=/trunk/; revision=2219

--- a/Source/ZEDEditor/ZEDUserInterface/ZEDObjectBrowser.ui
+++ b/Source/ZEDEditor/ZEDUserInterface/ZEDObjectBrowser.ui
@@ -37,7 +37,7 @@
     </widget>
    </item>
    <item>
-    <widget class="ZEDObjectTree" name="trwObjects"/>
+    <widget class="QTreeView" name="trwObjects"/>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -72,13 +72,6 @@
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>ZEDObjectTree</class>
-   <extends>QTreeWidget</extends>
-   <header>ZEDObjectTree.h</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
