MOD: Massive modifications has been made on ZEDAsset, ZEDAssetManager and ZEDAssetType. ADD: ZEDAssetCategory, ZEDAssetDirectory and ZEDAssetEvent facilities have been added. ADD: ZEDAssetModel, capable of searching, column customization and tree structure viewing, has been added with limited functionality. (Category hierarchy and list mode is missing) MOD: ZEDAssetBrowser has been modified to use ZEDAssetModel instead of ZEDAssetTree. REM: ZEDAssetTree has been removed in favor of ZEDAssetModel. ADD: ZEPathInfo::IsParentOf, ZEPathInfo::IsChildOf and ZEPathInfo::NormalizeSelf functions have been added. FIX: Minor fixes and improvements have been made on ZEDObjectBrowser and ZEDObjectModel.
svn path=/trunk/; revision=2221

--- a/Source/ZEDEditor/ZEDUserInterface/ZEDAssetBrowser.ui
+++ b/Source/ZEDEditor/ZEDUserInterface/ZEDAssetBrowser.ui
@@ -49,7 +49,7 @@
     </widget>
    </item>
    <item>
-    <widget class="ZEDAssetTree" name="trwAssets"/>
+    <widget class="QTreeView" name="trwAssets"/>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -77,13 +77,6 @@
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>ZEDAssetTree</class>
-   <extends>QTreeWidget</extends>
-   <header>ZEDAssetTree.h</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
