--- a/Source/ZEDEditor/ZEDUserInterface/ZEDClassBrowser.ui
+++ b/Source/ZEDEditor/ZEDUserInterface/ZEDClassBrowser.ui
@@ -27,20 +27,39 @@
     <number>2</number>
    </property>
    <item>
-    <widget class="QLineEdit" name="txtSearch">
-     <property name="inputMask">
-      <string/>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="placeholderText">
-      <string>Search Classes</string>
-     </property>
-     <property name="clearButtonEnabled">
-      <bool>false</bool>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QLineEdit" name="txtSearch">
+       <property name="inputMask">
+        <string/>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="placeholderText">
+        <string>Search Classes</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="btnMode">
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="ZEDCommon.qrc">
+         <normaloff>:/Icons/List.png</normaloff>
+         <normalon>:/Icons/Tree.png</normalon>:/Icons/List.png</iconset>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="QComboBox" name="cmbCategories">
@@ -80,6 +99,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="ZEDCommon.qrc"/>
+ </resources>
  <connections/>
 </ui>
