--- a/Source/ZEDEditor/ZEDUserInterface/ZEDToolbarOptionsPageWidget.ui
+++ b/Source/ZEDEditor/ZEDUserInterface/ZEDToolbarOptionsPageWidget.ui
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ZEDCustomizeUIWindow</class>
- <widget class="QWidget" name="ZEDCustomizeUIWindow">
+ <class>ZEDToolbarOptionsPageWidget</class>
+ <widget class="QWidget" name="ZEDToolbarOptionsPageWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>609</width>
-    <height>423</height>
+    <height>482</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Customize</string>
+   <string>Toolbar Options</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_4">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QSplitter" name="splitter">
      <property name="sizePolicy">
@@ -33,47 +45,6 @@
        <string>Element</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout_3">
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
-           <property name="sizeConstraint">
-            <enum>QLayout::SetMaximumSize</enum>
-           </property>
-           <item>
-            <widget class="QRadioButton" name="radElementTypeMenu">
-             <property name="text">
-              <string>Menu</string>
-             </property>
-             <property name="checked">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QRadioButton" name="radElementTypeToolbar">
-             <property name="text">
-              <string>Toolbar</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <spacer name="horizontalSpacer_2">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_6">
          <property name="sizeConstraint">
@@ -280,7 +251,7 @@
          <item row="4" column="0" colspan="2">
           <widget class="QTreeWidget" name="lstElementItems">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
              <verstretch>1</verstretch>
             </sizepolicy>
@@ -304,40 +275,6 @@
        <string>Items</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_3">
-         <item>
-          <widget class="QRadioButton" name="radItemTypeCommand">
-           <property name="text">
-            <string>Command</string>
-           </property>
-           <property name="checked">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QRadioButton" name="radItemTypeMenu">
-           <property name="text">
-            <string>Menu</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer_4">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
-       </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
@@ -377,45 +314,9 @@
      </widget>
     </widget>
    </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_4">
-     <property name="sizeConstraint">
-      <enum>QLayout::SetDefaultConstraint</enum>
-     </property>
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btnDefault">
-       <property name="text">
-        <string>Default</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btnSave">
-       <property name="text">
-        <string>Save</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
   </layout>
  </widget>
  <tabstops>
-  <tabstop>radElementTypeMenu</tabstop>
-  <tabstop>radElementTypeToolbar</tabstop>
   <tabstop>txtElementName</tabstop>
   <tabstop>txtElementText</tabstop>
   <tabstop>chkElementVisible</tabstop>
@@ -426,8 +327,6 @@
   <tabstop>lstElementItems</tabstop>
   <tabstop>cmbItemCategory</tabstop>
   <tabstop>lstItems</tabstop>
-  <tabstop>btnDefault</tabstop>
-  <tabstop>btnSave</tabstop>
  </tabstops>
  <resources/>
  <connections/>
