FIX: Infinite projection problem on ZEDGizmo::PickMoveAxis has been fixed. FIX: Multi selection rectangle not being displayed problem has been fixed. ADD: New icons have been added to many ZEDCommand and ZEEntity icon attribute. MOD: BoundingBox and Nameplate have been disabled on non selected wrappers for performance reasons.
svn path=/trunk/; revision=2373

--- a/Source/ZEDEditor/ZEDUserInterface/ZEDAssetBrowser.ui
+++ b/Source/ZEDEditor/ZEDUserInterface/ZEDAssetBrowser.ui
@@ -93,6 +93,10 @@
        <property name="text">
         <string>Add</string>
        </property>
+       <property name="icon">
+        <iconset resource="ZEDCommon.qrc">
+         <normaloff>:/Icons/Add.png</normaloff>:/Icons/Add.png</iconset>
+       </property>
       </widget>
      </item>
     </layout>
