--- a/Source/ZEDEditor/ZEDUserInterface/ZEDObjectBrowser.ui
+++ b/Source/ZEDEditor/ZEDUserInterface/ZEDObjectBrowser.ui
@@ -84,12 +84,20 @@
        <property name="text">
         <string>Delete</string>
        </property>
+       <property name="icon">
+        <iconset resource="ZEDCommon.qrc">
+         <normaloff>:/Icons/Delete.png</normaloff>:/Icons/Delete.png</iconset>
+       </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="pushButton">
        <property name="text">
         <string>Add</string>
+       </property>
+       <property name="icon">
+        <iconset resource="ZEDCommon.qrc">
+         <normaloff>:/Icons/Add.png</normaloff>:/Icons/Add.png</iconset>
        </property>
       </widget>
      </item>
