MOD: Application mentality in ZELNLauncer and ZELCLicense has been changed to product mentality in order combine multiple application into single product. MOD: ZELNLauncher configuration file moved from #E:/ZELauncher.ZEConfig to #E:/Configurations/ZELNLauncher.ZEConfig. MOD: Application node in ZELNLauncher.ZEConfig has been renamed to Product. FIX: Many bug fixes have been made on ZECRCrashReporter. FIX: Many bug fixes and improvements has been made on ZECrashHandler. REM: Removed old and deprecated files from ZECRCrashReporter. ADD: New fields (Name, Version, License) have been added to ZEApplicationModule for supplying data to ZECRCrashReport system.
svn path=/branches/v0.7.0-NewCore/; revision=2378

--- a/Source/ZELNLauncher/ZELNContactWidget.ui
+++ b/Source/ZELNLauncher/ZELNContactWidget.ui
@@ -76,15 +76,15 @@
                     Çankaya - Ankara/TÜRKİYE&lt;br /&gt;
                     &lt;span style=&quot;font-weight: 600;&quot;&gt;Tel : &lt;/span&gt;+90 312 210 1066&lt;br /&gt;
                     &lt;span style=&quot;font-weight: 600;&quot;&gt;Fax : &lt;/span&gt;+90 312 210 1043&lt;br /&gt;
-                    &lt;span style=&quot;font-weight: 600;&quot;&gt;E-Mail : &lt;/span&gt;&lt;a href=&quot;mailto:contact@zinekengine.com&quot;&gt;&lt;span style=&quot;text-decoration: underline; color: #0000ff;&quot;&gt;contact@zinekengine.com&lt;br /&gt;
-                    &lt;/span&gt;&lt;/a&gt;&lt;span style=&quot;font-weight: 600;&quot;&gt;WWW : &lt;/span&gt;&lt;a href=&quot;http://www.zinekengine.com&quot;&gt;&lt;span style=&quot;text-decoration: underline; color: #0000ff;&quot;&gt;www.zinekengine.com&lt;br /&gt;
-                    &lt;/span&gt;&lt;/a&gt;&lt;span style=&quot;font-weight: 600;&quot;&gt;Working Hours :&lt;/span&gt; 09:00-18:00 (GMT+2, Weekdays)
+                    &lt;span style=&quot;font-weight: 600;&quot;&gt;E-Mail : &lt;/span&gt;&lt;a href=&quot;mailto:contact@zinek.xyz&quot;&gt;&lt;span style=&quot;text-decoration: underline; color: #0000ff;&quot;&gt;contact@zinek.xyz&lt;br /&gt;
+                    &lt;/span&gt;&lt;/a&gt;&lt;span style=&quot;font-weight: 600;&quot;&gt;WWW : &lt;/span&gt;&lt;a href=&quot;http://www.zinek.xyz&quot;&gt;&lt;span style=&quot;text-decoration: underline; color: #0000ff;&quot;&gt;www.zinek.xyz&lt;br /&gt;
+                    &lt;/span&gt;&lt;/a&gt;&lt;span style=&quot;font-weight: 600;&quot;&gt;Working Hours :&lt;/span&gt; 09:30-19:00 (GMT+2, Weekdays)
                 &lt;/p&gt;
                 &lt;p&gt;
-                    &lt;a href=&quot;http://customer.zinekengine.com&quot;&gt;&lt;span style=&quot;font-size: 10pt; font-weight: 600; text-decoration: underline; color: #0000ff;&quot;&gt;Customer Portal&lt;/span&gt;&lt;/a&gt;&lt;br /&gt;
-                    &lt;a href=&quot;mailto:customer-support@zinekengine.com&quot;&gt;&lt;span style=&quot;text-decoration: underline; color: #0000ff;&quot;&gt;Customer Support&lt;/span&gt;&lt;/a&gt;&lt;br /&gt;
-                    &lt;a href=&quot;technical-support@zinekengine.com&quot;&gt;&lt;span style=&quot;text-decoration: underline; color: #0000ff;&quot;&gt;Techical Support&lt;/span&gt;&lt;/a&gt;&lt;br /&gt;
-                    &lt;a href=&quot;bug-suggestion@zinekengine.com&quot;&gt;&lt;span style=&quot;text-decoration: underline; color: #0000ff;&quot;&gt;Bug / Suggestion Report&lt;/span&gt;&lt;/a&gt;&lt;br /&gt;
+                    &lt;a href=&quot;http://support.zinek.xyz&quot;&gt;&lt;span style=&quot;font-size: 10pt; font-weight: 600; text-decoration: underline; color: #0000ff;&quot;&gt;Support Portal&lt;/span&gt;&lt;/a&gt;&lt;br /&gt;
+                    &lt;a href=&quot;mailto:customer-support@zinek.xyz&quot;&gt;&lt;span style=&quot;text-decoration: underline; color: #0000ff;&quot;&gt;Customer Support Contact&lt;/span&gt;&lt;/a&gt;&lt;br /&gt;
+                    &lt;a href=&quot;technical-support@zinek.xyz&quot;&gt;&lt;span style=&quot;text-decoration: underline; color: #0000ff;&quot;&gt;Techical Support Contact&lt;/span&gt;&lt;/a&gt;&lt;br /&gt;
+                    &lt;a href=&quot;bug-suggestion@zinek.xyz&quot;&gt;&lt;span style=&quot;text-decoration: underline; color: #0000ff;&quot;&gt;Bug / Suggestion Contact&lt;/span&gt;&lt;/a&gt;&lt;br /&gt;
                 &lt;/p&gt;
             &lt;/td&gt;
             &lt;td align=&quot;right&quot; valign=&quot;top&quot;&gt;
@@ -92,7 +92,7 @@
         &lt;/tr&gt;
         &lt;tr&gt;
             &lt;td colspan=&quot;2&quot;&gt;
-                &lt;p&gt;Copyright (C) 2008-2015, Zinek Code House. All rights reserved. This software and software package is registered trade mark of Zinek Code House. This software and software package is protected by international copyright and intellectual property laws. This software is sold/licenced only throught special licensing channels and explicit licensing aggremenets between parties. If you bought this software without any license agreement with &amp;quot;Zinek Code House&amp;quot;, you or your bussines may be victim of software counterfeit and piracy. If so, please contact to &amp;quot;Zinek Code House&amp;quot; by using contact information above. Thank you and we wish you plesant day or evening.&lt;/p&gt;
+                &lt;p&gt;Copyright (C) 2008-2017, Zinek Code House. All rights reserved. This software and software package is registered trade mark of Zinek Code House. This software and software package is protected by international copyright and intellectual property laws. This software is sold/licenced only throught special licensing channels and explicit licensing aggremenets between parties. If you bought this software without any license agreement with &amp;quot;Zinek Code House&amp;quot;, you or your bussines may be victim of software counterfeit and piracy. If so, please contact to &amp;quot;Zinek Code House&amp;quot; by using contact information above. Thank you and we wish you plesant day or evening.&lt;/p&gt;
             &lt;/td&gt;
         &lt;/tr&gt;
     &lt;/table&gt;
