--- a/Source/ZELNLauncher/ZELNLicenseEditorDialog.ui
+++ b/Source/ZELNLauncher/ZELNLicenseEditorDialog.ui
@@ -70,7 +70,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Application Name</string>
+         <string>Product Name</string>
         </property>
        </widget>
       </item>
