--- a/Source/ZETools/ZECrashReport/ZECRResources.qrc
+++ b/Source/ZETools/ZECrashReport/ZECRResources.qrc
@@ -1,1 +1,6 @@
-<RCC/>
+<RCC>
+  <qresource prefix="/">
+    <file alias="Logo.png">Resources/Logo.png</file>
+    <file alias="Zinek.ico">Resources/Zinek.ico</file>
+  </qresource>
+</RCC>
