--- a/Source/ZETools/ZECrashReport/ZECRReportViewer.ui
+++ b/Source/ZETools/ZECrashReport/ZECRReportViewer.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ZECRWindowViewReport</class>
- <widget class="QDialog" name="ZECRWindowViewReport">
+ <class>ZECRReportViewer</class>
+ <widget class="QDialog" name="ZECRReportViewer">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,11 +13,15 @@
   <property name="windowTitle">
    <string>Report Content</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="ZECRResources.qrc">
+    <normaloff>:/Zinek.ico</normaloff>:/Zinek.ico</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QTreeWidget" name="trwProviders">
+      <widget class="QListWidget" name="lstCollectors">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
          <horstretch>0</horstretch>
@@ -36,14 +40,6 @@
          <height>16777215</height>
         </size>
        </property>
-       <attribute name="headerVisible">
-        <bool>false</bool>
-       </attribute>
-       <column>
-        <property name="text">
-         <string notr="true">1</string>
-        </property>
-       </column>
       </widget>
      </item>
      <item>
@@ -154,6 +150,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="ZECRResources.qrc"/>
+ </resources>
  <connections/>
 </ui>
